forgejo/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/name: Forgejo
    gethomepage.dev/description: Git Server

spec:
  rules:
  - host: git
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: forgejo
              port:
                name: http
  - host: forgejo
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: forgejo
              port:
                name: http
